--- a/exercicio2/style.css
+++ b/exercicio2/style.css
@@ -1,5 +1,8 @@
 .longe-bordas{
     background-color: #FFA6A9;
+    padding: 10px;
+    margin: 60px 30px;
+    height: 300px;
   }
   
   .afastado{
@@ -7,16 +10,19 @@
   }
   .alto{
     background-color: #C3E887;
+    height: 300px;
   }
   
   .largo{
   background-color: #FFE396;
+  width: 500px;
   }
   
   .bordado{
     background-color: #AF9BCC;
+    border: solid black 1px;
   }
   
   .sumido{
-   
+   display: none;
   }
